@@ -5,4 +5,13 @@ void x()
 {
   DIR *dir;
   struct dirent *d;
+
+  dir = (DIR *) 1;
+  d = (struct dirent *) 1;
+}
+
+int main(void)
+{
+  x();
+  return 1;
 }
