@@ -1,3 +1,3 @@
--O2 -g -W -Wall -pedantic-errors -std=c99
+-O2 -g -W -Werror -Wall -pedantic-errors -std=c99 -Wno-unused-parameter
 
 The first line of this file is passed to the C compiler.
